deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: print-name
  labels:
    app: print-name
spec:
  selector:
    matchLabels:
      app: print-name
  replicas: 1
  template:
    metadata:
      labels:
        app: print-name
    spec:
      containers:
      - name: print-name-container
        image: "rahulkrlti/hello:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 9000
