service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app-svc
  labels:
    app: frontend-app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: frontend-app
